# Swordborne

./: .gitignore  Cargo.toml  justfile  vercel.json
assets/blue_knight/: move.sh
scripts/: vercel-build.sh
src/: dialogue.rs  fonts.rs  leaderboard.rs  main.rs  menu.rs  pause.rs  player.rs  puzzle.rs  state.rs  sword.rs  victory.rs
src/boss/: components.rs  logic.rs  mod.rs
src/combat/: mod.rs  slash.rs
src/level/: assets.rs  components.rs  logic.rs  mod.rs  scene.rs  spawn.rs
src/player/: animation.rs  collision.rs  components.rs  mod.rs  movement.rs  spawn.rs
src/sword/: aim.rs  components.rs  logic.rs  mod.rs  spawn.rs
wasm/: bevy_game.js  index.css  index.html  index.js  restart-audio-context.js
