[package]
name = "swordborne"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mongodb = { version = "2", default-features = false, features = ["sync"] }
dotenvy = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
