[package]
name = "swordborne"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["webgl2"] }
getrandom = "0.2"
serde_json = "1"
# base reqwest — no TLS (WASM uses browser fetch, TLS added per-platform below)
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# native: add blocking client + TLS (Cargo merges these features with the base above)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
dotenvy = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.43"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
